--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,6 +159,51 @@ jobs:
           git push origin gh-assets --force
           git checkout "$CURRENT_BRANCH"
 
+      - name: Ensure clean gh-assets branch
+        if: github.ref == 'refs/heads/main'
+        run: |
+          set -euo pipefail
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          BADGE_TMP=$(mktemp /tmp/coverage-XXXX.svg)
+          cp .github/badges/coverage.svg "$BADGE_TMP"
+          git fetch origin gh-assets || true
+          if git ls-remote --exit-code origin gh-assets &>/dev/null; then
+            git checkout -B gh-assets origin/gh-assets
+          else
+            git checkout --orphan gh-assets
+          fi
+          git reset --hard
+          find . -mindepth 1 -maxdepth 1 ! -name '.git' -exec rm -rf {} +
+          cp "$BADGE_TMP" coverage.svg
+          echo 'coverage.out' > .gitignore
+          echo '.env' >> .gitignore
+          cat > README.md <<'EOF'
+          # Coverage Badge Branch
+
+          Auto-generated coverage.svg updated by CI.
+
+          Raw badge URL:
+          https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/gh-assets/coverage.svg
+          EOF
+          git add coverage.svg .gitignore README.md
+          if git diff --cached --quiet; then
+            echo "No changes; skip commit"
+          else
+            git commit -m "chore: update coverage badge"
+          fi
+          git push origin gh-assets --force
+          git checkout "$CURRENT_BRANCH"
+
+      - name: Remove FETCH_HEAD from main branch
+        if: github.ref == 'refs/heads/main'
+        run: |
+          if [ -f FETCH_HEAD ]; then
+            echo "Removing FETCH_HEAD file from main branch"
+            rm -f FETCH_HEAD
+          fi
+
       - name: Comment coverage on PR
         if: github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v2
