--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
       POSTGRES_DB: chat_db
 
     steps:
+      # --- checkout repos ---
       - uses: actions/checkout@v4
 
       - name: Checkout proto repo
@@ -46,10 +47,14 @@ jobs:
           repository: grigory222/go-chat-proto
           path: go-chat-proto
 
-      - name: Adjust replace path for CI
+      - name: Patch go.mod for CI
         run: |
-          sed -i 's#../go-chat-proto#./go-chat-proto#' go.mod
+          # добавляем корректный replace (перекроет локальный ../)
+          echo "replace github.com/grigory222/go-chat-proto => ./go-chat-proto" >> go.mod
+          echo "go.mod after patch:"
+          grep go-chat-proto go.mod
 
+      # --- go setup ---
       - uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
@@ -57,6 +62,7 @@ jobs:
 
       - run: go mod download
 
+      # --- lint & tests ---
       - name: Vet & staticcheck
         run: |
           go vet ./...
@@ -68,6 +74,7 @@ jobs:
           go test -race -count=1 -coverprofile=coverage.out -covermode=atomic ./...
           go tool cover -func=coverage.out | grep total: | awk '{print $3}' > coverage.txt
 
+      # --- badge ---
       - name: Generate coverage badge
         id: covbadge
         run: |
@@ -98,6 +105,7 @@ jobs:
           </svg>
           EOF
 
+      # --- artifacts ---
       - uses: actions/upload-artifact@v4
         with:
           name: coverage
@@ -106,6 +114,7 @@ jobs:
             coverage.txt
             .github/badges/coverage.svg
 
+      # --- PR comment ---
       - name: Comment coverage on PR
         if: github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v2
@@ -113,6 +122,7 @@ jobs:
           message: |
             Coverage: ${{ steps.covbadge.outputs.pct }}%
 
+      # --- publish badge branch ---
       - name: Publish coverage badge to gh-assets branch
         if: github.ref == 'refs/heads/main'
         run: |
@@ -132,10 +142,14 @@ jobs:
           find . -mindepth 1 -maxdepth 1 ! -name '.git' -exec rm -rf {} +
           cp "$BADGE_FILE" coverage.svg
           echo -e "coverage.out\n.env" > .gitignore
-          echo "# Coverage Badge Branch" > README.md
-          echo "Auto-generated coverage.svg updated by CI." >> README.md
-          echo "Raw badge URL:" >> README.md
-          echo "https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/gh-assets/coverage.svg" >> README.md
+          {
+            echo "# Coverage Badge Branch"
+            echo
+            echo "Auto-generated coverage.svg updated by CI."
+            echo
+            echo "Raw badge URL:"
+            echo "https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/gh-assets/coverage.svg"
+          } > README.md
 
           git add coverage.svg .gitignore README.md
           if git diff --cached --quiet; then
