--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,26 +80,29 @@ jobs:
           COLOR=red
           if [ "${PCT%.*}" -ge 80 ]; then COLOR=brightgreen; elif [ "${PCT%.*}" -ge 60 ]; then COLOR=yellow; elif [ "${PCT%.*}" -ge 40 ]; then COLOR=orange; fi
           cat > .github/badges/coverage.svg <<EOF
-          <svg xmlns="http://www.w3.org/2000/svg" width="120" height="20">
-            <rect width="65" height="20" fill="#555"/>
-            <rect x="65" width="55" height="20" fill="$COLOR"/>
-            <text x="32" y="14" fill="#fff" font-family="Verdana" font-size="11">coverage</text>
-            <text x="92" y="14" fill="#fff" font-family="Verdana" font-size="11">$PCT%</text>
-          </svg>
-          EOF
+<svg xmlns="http://www.w3.org/2000/svg" width="120" height="20">
+  <rect width="65" height="20" fill="#555"/>
+  <rect x="65" width="55" height="20" fill="$COLOR"/>
+  <text x="32" y="14" fill="#fff" font-family="Verdana" font-size="11">coverage</text>
+  <text x="92" y="14" fill="#fff" font-family="Verdana" font-size="11">$PCT%</text>
+</svg>
+EOF
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage
-          path: |
-            coverage.out
-            coverage.txt
-            .github/badges/coverage.svg
+      - name: Commit coverage badge
+        if: github.ref == 'refs/heads/main'
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add .github/badges/coverage.svg
+          git diff --cached --quiet || git commit -m "chore: update coverage badge"
+          git push origin main || true
 
       - name: Comment coverage on PR
         if: github.event_name == 'pull_request'
+        run: |
+          PCT=$(cat coverage.txt)
+          REPO=${GITHUB_REPOSITORY}
+          echo "![Coverage](https://raw.githubusercontent.com/$REPO/main/.github/badges/coverage.svg) ($PCT%)" > comment.md
         uses: thollander/actions-comment-pull-request@v2
         with:
-          message: |
-            Coverage: $(cat coverage.txt)
+          message: ${{ steps.comment.outputs.comment }}
