--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,14 +85,7 @@ jobs:
           elif [ "${PCT%.*}" -ge 40 ]; then
             COLOR=orange
           fi
-          cat > .github/badges/coverage.svg <<EOF
-<svg xmlns="http://www.w3.org/2000/svg" width="120" height="20">
-  <rect width="65" height="20" fill="#555"/>
-  <rect x="65" width="55" height="20" fill="$COLOR"/>
-  <text x="32" y="14" fill="#fff" font-family="Verdana" font-size="11">coverage</text>
-  <text x="92" y="14" fill="#fff" font-family="Verdana" font-size="11">$PCT%</text>
-</svg>
-EOF
+          echo "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"120\" height=\"20\">\n  <rect width=\"65\" height=\"20\" fill=\"#555\"/>\n  <rect x=\"65\" width=\"55\" height=\"20\" fill=\"$COLOR\"/>\n  <text x=\"32\" y=\"14\" fill=\"#fff\" font-family=\"Verdana\" font-size=\"11\">coverage</text>\n  <text x=\"92\" y=\"14\" fill=\"#fff\" font-family=\"Verdana\" font-size=\"11\">$PCT%</text>\n</svg>" > .github/badges/coverage.svg
 
       - name: Commit coverage badge to main
         if: github.ref == 'refs/heads/main'
