--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,7 @@ jobs:
         run: |
           mkdir -p .github/badges
           PCT=$(cat coverage.txt | sed 's/%//')
+          echo "PCT: $PCT" # Debugging output
           COLOR=red
           if [ "${PCT%.*}" -ge 80 ]; then
             COLOR=brightgreen
@@ -85,7 +86,12 @@ jobs:
           elif [ "${PCT%.*}" -ge 40 ]; then
             COLOR=orange
           fi
+          echo "COLOR: $COLOR" # Debugging output
           echo "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"120\" height=\"20\">\n  <rect width=\"65\" height=\"20\" fill=\"#555\"/>\n  <rect x=\"65\" width=\"55\" height=\"20\" fill=\"$COLOR\"/>\n  <text x=\"32\" y=\"14\" fill=\"#fff\" font-family=\"Verdana\" font-size=\"11\">coverage</text>\n  <text x=\"92\" y=\"14\" fill=\"#fff\" font-family=\"Verdana\" font-size=\"11\">$PCT%</text>\n</svg>" > .github/badges/coverage.svg
+          if [ ! -f .github/badges/coverage.svg ]; then
+            echo "Failed to create coverage badge." >&2
+            exit 1
+          fi
 
       - name: Commit coverage badge to main
         if: github.ref == 'refs/heads/main'
