--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
           elif [ "${PCT%.*}" -ge 40 ]; then
             COLOR=orange
           fi
-          echo "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"120\" height=\"20\">\n  <rect width=\"65\" height=\"20\" fill=\"#555\"/>\n  <rect x=\"65\" width=\"55\" height=\"20\" fill=\"$COLOR\"/>\n  <text x=\"32\" y=\"14\" fill=\"#fff\" font-family=\"Verdana\" font-size=\"11\">coverage</text>\n  <text x=\"92\" y=\"14\" fill=\"#fff\" font-family=\"Verdana\" font-size=\"11\">$PCT%</text>\n</svg>" | tee .github/badges/coverage.svg > /dev/null
+          echo "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"120\" height=\"20\">\n  <rect width=\"65\" height=\"20\" fill=\"#555\"/>\n  <rect x=\"65\" width=\"55\" height=\"20\" fill=\"$COLOR\"/>\n  <text x=\"32\" y=\"14\" fill=\"#fff\" font-family=\"Verdana, sans-serif\" font-size=\"11\">Coverage</text>\n  <text x=\"92\" y=\"14\" fill=\"#fff\" font-family=\"Verdana, sans-serif\" font-size=\"11\">$PCT%</text>\n</svg>" | tee .github/badges/coverage.svg > /dev/null
           if [ ! -f .github/badges/coverage.svg ]; then
             echo "Failed to create coverage badge." >&2
             exit 1
