--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,21 +75,17 @@ jobs:
 
       - name: Generate coverage badge
         run: |
-          mkdir -p .github/badges
           PCT=$(cat coverage.txt | sed 's/%//')
-          COLOR=red
+          COLOR="red"
           if [ "${PCT%.*}" -ge 80 ]; then
-            COLOR=brightgreen
+            COLOR="brightgreen"
           elif [ "${PCT%.*}" -ge 60 ]; then
-            COLOR=yellow
+            COLOR="yellow"
           elif [ "${PCT%.*}" -ge 40 ]; then
-            COLOR=orange
+            COLOR="orange"
           fi
-          echo "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"120\" height=\"20\">\n  <rect width=\"65\" height=\"20\" fill=\"#555\"/>\n  <rect x=\"65\" width=\"55\" height=\"20\" fill=\"$COLOR\"/>\n  <text x=\"32\" y=\"14\" fill=\"#fff\" font-family=\"Verdana, sans-serif\" font-size=\"11\">Coverage</text>\n  <text x=\"92\" y=\"14\" fill=\"#fff\" font-family=\"Verdana, sans-serif\" font-size=\"11\">$PCT%</text>\n</svg>" | tee .github/badges/coverage.svg > /dev/null
-          if [ ! -f .github/badges/coverage.svg ]; then
-            echo "Failed to create coverage badge." >&2
-            exit 1
-          fi
+          curl -s "https://img.shields.io/badge/Coverage-${PCT}%25-${COLOR}.svg" -o .github/badges/coverage.svg
+
 
       - name: Commit coverage badge to main
         if: github.ref == 'refs/heads/main'
